Added window service.
Including work-arounds necessary to support --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=dev.ikm.komet.navigator.

Navigator needs to be in the app (not plugin) libraries otherwise we can’t add the exports.